--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1 style="color: Gold;">Productive Places: Team Gold<h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Team Gold</title>
+  </head>
+
+  <body>
+    <h1 style="color: Gold;">Productive Places: Team Gold<h1>
+    <nav>
+        <a href="#home" class="active">Home</a>
+        <a href="/presentations.html">Presentations</a>
+    </nav>
+  </body>
+</html>
