--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
         <a href="#home" class="active">Home</a>
-        <a href="/presentations.html">Presentations</a>
+        <a href="/ProductivePlaces/presentations.html">Presentations</a>
     </nav>
   </body>
 </html>
