--- a/presentations.html
+++ b/presentations.html
@@ -10,6 +10,6 @@
         <a href="#home" class="active">Home</a>
         <a href="/ProductivePlaces/presentations.html">Presentations</a>
     </nav>
-    <iframe src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing" title="Presentation"></iframe>
+    <iframe style="border: 0; width:100%; height: 50vh; overflow: auto;" src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing"></iframe>
   </body>
 </html>
