--- a/presentations.html
+++ b/presentations.html
@@ -7,7 +7,7 @@
 
   <body>
     <nav>
-        <a href="#home" class="active">Home</a>
+        <a href="/ProductivePlaces/index.html" class="active">Home</a>
         <a href="/ProductivePlaces/presentations.html">Presentations</a>
     </nav>
     <iframe style="border: 0; width:100%; height: 50vh; overflow: auto;" src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing"></iframe>
