--- a/presentations.html
+++ b/presentations.html
@@ -10,6 +10,6 @@
         <a href="/ProductivePlaces/index.html" class="active">Home</a>
         <a href="/ProductivePlaces/presentations.html">Presentations</a>
     </nav>
-    <iframe style="border: 0; width:75%; height: 75vh; overflow: auto;" src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing"></iframe>
+    <p align="center"><iframe style="border: 0; width:75%; height: 75vh; overflow: auto;" src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing"></iframe></p>
   </body>
 </html>
