--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="/ProductivePlaces/presentations.html">Presentations</a>
+        <a href="/ProductivePlaces/teambio.html">Team Bio</a>
     </nav>
   </body>
 </html>
