--- a/presentations.html
+++ b/presentations.html
@@ -9,6 +9,7 @@
     <nav>
         <a href="/ProductivePlaces/index.html" class="active">Home</a>
         <a href="/ProductivePlaces/presentations.html">Presentations</a>
+        <a href="/ProductivePlaces/teambio.html">Team Bio</a>
     </nav>
     <p align="center"><iframe style="border: 0; width:75%; height: 75vh; overflow: auto;" src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing"></iframe></p>
   </body>
