--- a/presentations.html
+++ b/presentations.html
@@ -11,6 +11,6 @@
         <a href="/ProductivePlaces/presentations.html">Presentations</a>
         <a href="/ProductivePlaces/teambio.html">Team Bio</a>
     </nav>
-    <p align="center"><iframe style="border: 0; width:75%; height: 75vh; overflow: auto;" src="https://docs.google.com/presentation/d/1aNbDpxdnstiyie_tMTXhIb5ft_DUHFw5ZckKOCkFZDw/edit?usp=sharing"></iframe></p>
+    <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSVnFW0kiork9c78hIqPfcUpyMP-o1LSwX5B9d1hvphnYBSgWQj09MC6dnzPpwd8dZ7hHkU_AGfB9Cz/embed?start=true&loop=true&delayms=5000" frameborder="0" width="75%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></iframe></p>
   </body>
 </html>
