--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Team Gold</title>
   </head>
 
-  <body>
+  <body style="background-color:powderblue;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
         <a href="#home" class="active">Home</a>
