Update the colors of the links in index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-        <a href="#home" class="active">Home</a>
-        <a href="/ProductivePlaces/presentations.html">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html">Team Bio</a>
+        <a href="#home" class="active" style="color: Gold;">Home</a>
+        <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
+        <a href="/ProductivePlaces/teambio.html" style="color: Gold;">Team Bio</a>
     </nav>
   </body>
 </html>
