--- a/presentations.html
+++ b/presentations.html
@@ -5,11 +5,11 @@
     <title>Team Gold</title>
   </head>
 
-  <body>
+  <body style="background-color:black;">
     <nav>
-        <a href="/ProductivePlaces/index.html" class="active">Home</a>
-        <a href="/ProductivePlaces/presentations.html">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html">Team Bio</a>
+        <a href="/ProductivePlaces/index.html" class="active" style="color: Gold;">Home</a>
+        <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
+        <a href="/ProductivePlaces/teambio.html" style="color: Gold;">Team Bio</a>
     </nav>
     <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSVnFW0kiork9c78hIqPfcUpyMP-o1LSwX5B9d1hvphnYBSgWQj09MC6dnzPpwd8dZ7hHkU_AGfB9Cz/embed?start=true&loop=true&delayms=60000" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
   </body>
