Update background color and link colors in teambio.html

--- a/teambio.html
+++ b/teambio.html
@@ -5,12 +5,12 @@
     <title>Team Gold</title>
   </head>
 
-  <body>
+  <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-        <a href="/ProductivePlaces/index.html">Home</a>
-        <a href="/ProductivePlaces/presentations.html">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html" class="active">Team Bio</a>
+        <a href="/ProductivePlaces/index.html" style="color: Gold;">Home</a>
+        <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
+        <a href="/ProductivePlaces/teambio.html" class="active" style="color: Gold;">Team Bio</a>
     </nav>
   </body>
 </html>
