--- a/teambio.html
+++ b/teambio.html
@@ -11,6 +11,13 @@
         <a href="/ProductivePlaces/index.html" style="color: Gold;">Home</a>
         <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
         <a href="/ProductivePlaces/teambio.html" class="active" style="color: Gold;">Team Bio</a>
+
+<div class="row">
+  <div class="column">
+    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" style="width:100%">
+    <p>Test 1</p>
+  </div>
+</div>
     </nav>
   </body>
 </html>
