--- a/teambio.html
+++ b/teambio.html
@@ -15,8 +15,8 @@
       
 <div class="row">
   <div class="column">
-    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" style="width:100%">
-    <p>Test 1</p>
+    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" width="200" height="500">
+    <p style="background-color:Gold;">Test 1</p>
   </div>
 </div>
       
