--- a/teambio.html
+++ b/teambio.html
@@ -15,7 +15,7 @@
       
 <div class="row">
   <div class="column">
-    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" width="200" height="500">
+    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" width: "200">
     <p style="background-color:Gold;">Test 1</p>
   </div>
 </div>
