--- a/teambio.html
+++ b/teambio.html
@@ -10,12 +10,12 @@
     <nav>
         <a href="/ProductivePlaces/index.html" style="color: Gold;">Home</a>
         <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html" class="active" style="color: Gold;">Team Bio</a>
+        <a href="/ProductivePlaces/teambio.html" class="active" style="color: Gold;">Team Bio</a>&nbsp;&nbsp;
     </nav>
 
 <div class="row">
   <div class="column">
-    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" style="width:30%">
+    <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" style="width:10%">
   </div>
 </div>
       
