--- a/teambio.html
+++ b/teambio.html
@@ -16,6 +16,8 @@
 <div class="row">
   <div class="column">
     <img src="https://raw.githubusercontent.com/Christian-Mirt/ProductivePlaces/refs/heads/gh_pages/images/100_9185.jpg" alt="Yomna" style="width:20%">
+     <p> style="color: Gold"> Yomna Elmousalami is a senior at Old Dominion University studying computer science. After graduating, she is interested in pursuing graduate studies and 
+      receiving a Masters in Computer Science.</p>
   </div>
 </div>
       
