--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
+      <button type="button" class ="button_color" onclick = "/ProductivePlaces/index.html">Home</button>
+
+
         <a href="#home" class="active" style="color: Gold;">Home</a>
         <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
         <a href="/ProductivePlaces/teambio.html" style="color: Gold;">Team Bio</a>
