--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-      <button type="button" class ="button_color" onclick = "/ProductivePlaces/index.html">Home</button>
+      <button type="button" class ="button" onclick = "/ProductivePlaces/index.html">Home</button>
 
 
         <a href="#home" class="active" style="color: Gold;">Home</a>
