--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-      <button type="button" class ="button" onclick = "/ProductivePlaces/index.html">Home</button>
+      <a href="/ProductivePlaces/index.html" class="button_color">
+        <button>Home</button>
+      </a>
 
-
-        <a href="#home" class="active" style="color: Gold;">Home</a>
-        <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html" style="color: Gold;">Team Bio</a>
+      <a href="/ProductivePlaces/presentations.html" class="button_color">
+        <button>Presentations</button>
+      </a>
+        
+      <a href="/ProductivePlaces/teambio.html" class="button_color">
+        <button>Team Bio</button>
+      </a>
     </nav>
   </body>
 </html>
