buttons are done

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-      <a href="/ProductivePlaces/index.html" class="button_color">
-        <button>Home</button>
+      <a href="/ProductivePlaces/index.html" class="button_colors">
+        <button>Homes</button>
       </a>
 
-      <a href="/ProductivePlaces/presentations.html" class="button_color">
-        <button>Presentations</button>
+      <a href="/ProductivePlaces/presentations.html" class="button_colors">
+        <button>Presentationss</button>
       </a>
         
-      <a href="/ProductivePlaces/teambio.html" class="button_color">
-        <button>Team Bio</button>
+      <a href="/ProductivePlaces/teambio.html" class="button_colors">
+        <button>Team Bios</button>
       </a>
     </nav>
   </body>
