buttons are done

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-      <a href="/ProductivePlaces/index.html" class="button_colors">
+      <a href="/ProductivePlaces/index.html" class="button_color">
         <button>Homes</button>
       </a>
 
-      <a href="/ProductivePlaces/presentations.html" class="button_colors">
+      <a href="/ProductivePlaces/presentations.html" class="button_color">
         <button>Presentationss</button>
       </a>
         
-      <a href="/ProductivePlaces/teambio.html" class="button_colors">
+      <a href="/ProductivePlaces/teambio.html" class="button_color">
         <button>Team Bios</button>
       </a>
     </nav>
