--- a/presentations.html
+++ b/presentations.html
@@ -12,5 +12,6 @@
         <a href="/ProductivePlaces/teambio.html" style="color: Gold;">Team Bio</a>
     </nav>
     <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSVnFW0kiork9c78hIqPfcUpyMP-o1LSwX5B9d1hvphnYBSgWQj09MC6dnzPpwd8dZ7hHkU_AGfB9Cz/embed?start=true&loop=true&delayms=60000" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
+    <p align="center"><iframe src="https://docs.google.com/presentation/d/1EAAHtydSRpZz2DMcBW01q4l4MzPJFnrpIwbVVqPqzfg/edit?usp=sharing" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
   </body>
 </html>
