spelling error fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </a>
 
       <a href="/ProductivePlaces/presentations.html" class="button_color">
-        <button>Presentationss</button>
+        <button>Presentations</button>
       </a>
         
       <a href="/ProductivePlaces/teambio.html" class="button_color">
