spelling fixed again

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-      <a href="/ProductivePlaces/index.html" class="button_color">
-        <button>Homes</button>
+      <a href="#home" class="button_color">
+        <button>Home</button>
       </a>
 
       <a href="/ProductivePlaces/presentations.html" class="button_color">
