updated buttons and added a references.html and .css

--- a/presentations.html
+++ b/presentations.html
@@ -3,14 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
+    <link rel="stylesheet" href="presentations.css">
   </head>
 
   <body style="background-color:black;">
     <nav>
-        <a href="/ProductivePlaces/index.html" class="active" style="color: Gold;">Home</a>
-        <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html" style="color: Gold;">Team Bio</a>
+      <a href="/ProductivePlaces/index.html" class="button_color">
+        <button>Home</button>
+      </a>
+      <a href="/ProductivePlaces/presentations.html" class="button_color">
+        <button>Presentations</button>
+      </a>
+        
+      <a href="/ProductivePlaces/teambio.html" class="button_color">
+        <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/references.html" class="button_color">
+        <button>References</button>
+      </a>
     </nav>
+    <br>
     <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSVnFW0kiork9c78hIqPfcUpyMP-o1LSwX5B9d1hvphnYBSgWQj09MC6dnzPpwd8dZ7hHkU_AGfB9Cz/embed?start=true&loop=true&delayms=60000" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
     <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSwNwpdZYNyoYVFV1tfRc-DM_st7o_1nbJqyMBQwdUQHnkMSLcQpELRzEfmwTkMgHTjjG8PuR6VS3g2/embed?start=false&loop=false&delayms=3000" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
   </body>
