--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body style="background-color:black;">
-    <h1 style="color: Gold;">Productive Places: Team Gold<h1>
+    <h1 style="color: Gold; font-weight: bold">Productive Places: Team Gold<h1>
     <nav>
       <a href="#home" class="button_color">
         <button>Home</button>
@@ -19,6 +19,12 @@
         
       <a href="/ProductivePlaces/teambio.html" class="button_color">
         <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/teambio.html" class="button_color">
+        <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/references.html" class="button_color">
+        <button>References</button>
       </a>
     </nav>
   </body>
