--- a/teambio.html
+++ b/teambio.html
@@ -9,9 +9,20 @@
   <body style="background-color:black;">
     <h1 style="color: Gold;">Productive Places: Team Gold<h1>
     <nav>
-        <a href="/ProductivePlaces/index.html" style="color: Gold;">Home</a>
-        <a href="/ProductivePlaces/presentations.html" style="color: Gold;">Presentations</a>
-        <a href="/ProductivePlaces/teambio.html" class="active" style="color: Gold;">Team Bio</a><br><br>
+      <a href="/ProductivePlaces/index.html" class="button_color">
+        <button>Home</button>
+      </a>
+
+      <a href="/ProductivePlaces/presentations.html" class="button_color">
+        <button>Presentations</button>
+      </a>
+        
+      <a href="/ProductivePlaces/teambio.html" class="button_color">
+        <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/references.html" class="button_color">
+        <button>References</button>
+      </a><br><br>
     </nav>
     <div class="bio-row">
       <div class="bio-card">
