Added Elevator pictch, links to ODU and CS, made headers of each page match

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         <button>Presentations</button>
       </a>
         
+
       <a href="/ProductivePlaces/teambio.html" class="button_color">
         <button>Team Bios</button>
       </a>
-      <a href="/ProductivePlaces/teambio.html" class="button_color">
-        <button>Team Bios</button>
-      </a>
+
       <a href="/ProductivePlaces/references.html" class="button_color">
         <button>References</button>
       </a>
+      <h2 style="color: aliceblue;">Project Description</h2>
+      <p style="color: aliceblue;">Many students struggle to concentrate on studying and completing schoolwork at home for various reasons, resulting in a need for finding alternate locations to be productive. Students seeking study locations that remain open during the evenings will gain the most advantages, as many places close early, and don’t accommodate for late hours. Our team proposes a web application that returns to the user a list of places open for studying, collaborating, to address the problem. </p>
     </nav>
   </body>
 </html>
