--- a/references.html
+++ b/references.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
+    <link rel="stylesheet" href="references.css">
   </head>
 
   <body style="background-color:black;">
     <h1 style="color: Gold; font-weight: bold">Productive Places: Team Gold<h1>
+    <nav>
+      <a href="/ProductivePlaces/index.html" class="button_color">
+        <button>Home</button>
+      </a>
+
+      <a href="/ProductivePlaces/presentations.html" class="button_color">
+        <button>Presentations</button>
+      </a>
+        
+      <a href="/ProductivePlaces/teambio.html" class="button_color">
+        <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/references.html" class="button_color">
+        <button>References</button>
+      </a><br><br>
+      <ul>
+        <li>
+          <a href="http://www.odu.edu/">ODU website</a>
+        </li>
+        <li>
+          <a href="http://www.cs.odu.edu/">ODU CS Department</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
