--- a/references.html
+++ b/references.html
@@ -24,6 +24,39 @@
         <button>References</button>
       </a><br><br>
       <ul>
+       <ol>
+        <div class = "apa">
+          <p class = "text_Color">Draw.io - free flowchart maker and diagrams online. Flowchart Maker & Online Diagram Software. (n.d.). https://app.diagrams.net/#G1t9nWqBpGWQlMPaay1Tz1KpGtWdZxeuol#%7B%22pageId%22%3A%22C5RBs43oDa-KdzZeNtuy%22%7D</p>
+        </div>
+
+        <div class = "apa">
+          <p class = "text_Color">Dziuba, A. (2024, January 12). Why and when to use node.js in 2024 [Complete guide]. Relevant Software. https://relevant.software/blog/why-and-when-to-use-node-js/#When_Not_to_Use_Nodejs</p>
+        </div>
+
+        <div class = "apa">
+          <p class = "text_Color">Falk, A., & Ichino, A. (2006). Clean Evidence on Peer Effects. Journal of Labor Economics, 24(1), 39–57. https://doi.org/10.1086/497818</p>
+        </div>
+
+        <div class = "apa">
+          <p class="text_Color">Hutsulyak, O. (2024, August 13). Why use react for web development: 10 reasons to apply. TechMagic. https://www.techmagic.co/blog/why-we-use-react-js-in-the-development</p>
+        </div>
+
+        <div class = "apa">
+          <p class="text_Color">Kennedy, T. (n.d.-a). CSTKENNEDY/CS410-411W-examples. GitHub. https://github.com/cstkennedy/cs410-411w-examples</p>
+        </div>
+
+        <div class = "apa">
+          <p class="text_Color">King, B. B. (n.d.). Inspire lifelong learning with these 25 education quotes. https://www.adobe.com/express/learn/blog/25-educational-quotes</p>
+        </div>
+
+        <div class = "apa">
+          <p class="text_Color">Smallcombe, M. (2024, September 4). PostgreSQL vs MySQL: The critical differences. Integrate.io. https://www.integrate.io/blog/postgresql-vs-mysql-which-one-is-better-for-your-use-case/</p>
+        </div>
+
+        <div class = "apa">
+          <p class="text_Color">Steinmetz, J., & Fishbach, A. (2021, February 1). We work harder when we know someone’s watching. Harvard Business Review.</p>
+        </div>
+       </ol>
         <li>
           <a href="http://www.odu.edu/">ODU website</a>
         </li>
