added problem and glossary html and css files

--- a/Problem.html
+++ b/Problem.html
@@ -3,38 +3,30 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="presentations.css">
   </head>
 
   <body style="background-color:black;">
     <h1 style="color: Gold; font-weight: bold">Productive Places: Team Gold<h1>
     <nav>
-      <a href="#home" class="button_color">
+      <a href="/ProductivePlaces/index.html" class="button_color">
         <button>Home</button>
       </a>
-
       <a href="/ProductivePlaces/Problem.html" class="button_color">
         <button>Problem</button>
       </a>
-
       <a href="/ProductivePlaces/presentations.html" class="button_color">
         <button>Presentations</button>
-      </a>
-        
-
+      </a>  
       <a href="/ProductivePlaces/teambio.html" class="button_color">
         <button>Team Bios</button>
       </a>
-
       <a href="/ProductivePlaces/Glossary.html" class="button_color">
         <button>Glossary</button>
       </a>
-
       <a href="/ProductivePlaces/references.html" class="button_color">
         <button>References</button>
       </a>
-      <h2 style="color: aliceblue;">Project Description</h2>
-      <p style="color: aliceblue;">Many students struggle to concentrate on studying and completing schoolwork at home for various reasons, resulting in a need for finding alternate locations to be productive. Students seeking study locations that remain open during the evenings will gain the most advantages, as many places close early, and don’t accommodate for late hours. Our team proposes a web application that returns to the user a list of places open for studying, collaborating, to address the problem. </p>
     </nav>
   </body>
 </html>
