--- a/presentations.html
+++ b/presentations.html
@@ -12,11 +12,16 @@
       <a href="/ProductivePlaces/index.html" class="button_color">
         <button>Home</button>
       </a>
+      <a href="/ProductivePlaces/Problem.html" class="button_color">
+        <button>Problem</button>
+      </a>
       <a href="/ProductivePlaces/presentations.html" class="button_color">
         <button>Presentations</button>
-      </a>
-        
+      </a>  
       <a href="/ProductivePlaces/teambio.html" class="button_color">
+        <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/Glossary.html" class="button_color">
         <button>Team Bios</button>
       </a>
       <a href="/ProductivePlaces/references.html" class="button_color">
