--- a/references.html
+++ b/references.html
@@ -12,13 +12,17 @@
       <a href="/ProductivePlaces/index.html" class="button_color">
         <button>Home</button>
       </a>
-
+      <a href="/ProductivePlaces/Problem.html" class="button_color">
+        <button>Problem</button>
+      </a>
       <a href="/ProductivePlaces/presentations.html" class="button_color">
         <button>Presentations</button>
-      </a>
-        
+      </a>     
       <a href="/ProductivePlaces/teambio.html" class="button_color">
         <button>Team Bios</button>
+      </a>
+      <a href="/ProductivePlaces/Glossary.html" class="button_color">
+        <button>Glossary</button>
       </a>
       <a href="/ProductivePlaces/references.html" class="button_color">
         <button>References</button>
@@ -58,10 +62,10 @@
         </div>
        </ol>
         <li>
-          <a href="http://www.odu.edu/">ODU website</a>
+          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
         </li>
         <li>
-          <a href="http://www.cs.odu.edu/">ODU CS Department</a>
+          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
         </li>
       </ul>
     </nav>
