change button name

--- a/presentations.html
+++ b/presentations.html
@@ -22,7 +22,7 @@
         <button>Team Bios</button>
       </a>
       <a href="/ProductivePlaces/Glossary.html" class="button_color">
-        <button>Team Bios</button>
+        <button>Glossary</button>
       </a>
       <a href="/ProductivePlaces/references.html" class="button_color">
         <button>References</button>
