--- a/presentations.html
+++ b/presentations.html
@@ -28,8 +28,15 @@
         <button>References</button>
       </a>
     </nav>
-    <br>
     <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSVnFW0kiork9c78hIqPfcUpyMP-o1LSwX5B9d1hvphnYBSgWQj09MC6dnzPpwd8dZ7hHkU_AGfB9Cz/embed?start=true&loop=true&delayms=60000" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
     <p align="center"><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSwNwpdZYNyoYVFV1tfRc-DM_st7o_1nbJqyMBQwdUQHnkMSLcQpELRzEfmwTkMgHTjjG8PuR6VS3g2/embed?start=false&loop=false&delayms=3000" frameborder="0" width="75%" height="839px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
+    
+    <div style="text-align: center;">
+    <a href="https://drive.google.com/uc?export=download&id=1-l9BY8YXCXrJ8wks8yXpKWaa2s3j_ANE/preview" align="center" style="color: Gold;" download>Feasibility Presentation</a>
+    </div>
+    
+    <div style="text-align: center;">
+    <a href="https://drive.google.com/uc?export=download&id=15CaZHZGAYpKNWMO1BqJ-ZVH4X8lr4t1b/preview" align="center" style="color: Gold;" download>Design Presentation</a>
+    </div>
   </body>
 </html>
