Condensed styles into one stylesheet, and played around with layouts

--- a/Glossary.html
+++ b/Glossary.html
@@ -3,36 +3,55 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body style="background-color:black;">
-    <h1 style="color: Gold; font-weight: bold">Productive Places: Team Gold<h1>
-    <nav>
-      <a href="#home" class="button_color">
-        <button>Home</button>
-      </a>
+  <body>
+    <div class = "header" >
+      <h1>Productive Places: Team Gold</h1>
+    
+      <nav class = "topnav">
+        <a  class="button" href="/ProductivePlaces/index.html">
+        Home
+        </a>
+        <a  class="button" href="/ProductivePlaces/Problem.html">
+          Problem
+        </a>
+        <a class="button" href="/ProductivePlaces/presentations.html">
+          Presentations
+        </a>     
+        <a class="button" href="/ProductivePlaces/teambio.html">
+          Team Bios
+        </a>
+        <a class="button" href="/ProductivePlaces/Glossary.html">
+          Glossary
+        </a>
+        <a class="button" href="/ProductivePlaces/references.html">
+          References
+        </a>
+      </nav>
+      <br>
+     </div>
 
-      <a href="/ProductivePlaces/Problem.html" class="button_color">
-        <button>Problem</button>
-      </a>
+     <br>
 
-      <a href="/ProductivePlaces/presentations.html" class="button_color">
-        <button>Presentations</button>
-      </a>
-        
+     <div class ="body-card">
+      <h2>Glossary</h2>
+      <ul>
+        <li>
+            <!-- Placeholder -->
+        </li>
+      </ul>
+    </div>
 
-      <a href="/ProductivePlaces/teambio.html" class="button_color">
-        <button>Team Bios</button>
-      </a>
+<br>
 
-      <a href="/ProductivePlaces/Glossary.html" class="button_color">
-        <button>Glossary</button>
-      </a>
+    <div class = "footer">
 
-      <a href="/ProductivePlaces/references.html" class="button_color">
-        <button>References</button>
-      </a>
-    </nav>
+          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
+            |
+          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
+
+    </div>
   </body>
 </html>
