--- a/Problem.html
+++ b/Problem.html
@@ -3,30 +3,62 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
-    <link rel="stylesheet" href="presentations.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body style="background-color:black;">
-    <h1 style="color: Gold; font-weight: bold">Productive Places: Team Gold<h1>
-    <nav>
-      <a href="/ProductivePlaces/index.html" class="button_color">
-        <button>Home</button>
-      </a>
-      <a href="/ProductivePlaces/Problem.html" class="button_color">
-        <button>Problem</button>
-      </a>
-      <a href="/ProductivePlaces/presentations.html" class="button_color">
-        <button>Presentations</button>
-      </a>  
-      <a href="/ProductivePlaces/teambio.html" class="button_color">
-        <button>Team Bios</button>
-      </a>
-      <a href="/ProductivePlaces/Glossary.html" class="button_color">
-        <button>Glossary</button>
-      </a>
-      <a href="/ProductivePlaces/references.html" class="button_color">
-        <button>References</button>
-      </a>
-    </nav>
+  <body>
+    <div class = "header" >
+      <h1>Productive Places: Team Gold</h1>
+    
+      <nav class = "topnav">
+        <a  class="button" href="/ProductivePlaces/index.html">
+        Home
+        </a>
+        <a  class="button" href="/ProductivePlaces/Problem.html">
+          Problem
+        </a>
+        <a class="button" href="/ProductivePlaces/presentations.html">
+          Presentations
+        </a>     
+        <a class="button" href="/ProductivePlaces/teambio.html">
+          Team Bios
+        </a>
+        <a class="button" href="/ProductivePlaces/Glossary.html">
+          Glossary
+        </a>
+        <a class="button" href="/ProductivePlaces/references.html">
+          References
+        </a>
+      </nav>
+      <br>
+     </div>
+
+<br>
+
+    <div class="body-card">
+    <h2>The Problem</h2>
+      <p>Many students struggle to concentrate on studying and completing schoolwork at home for various reasons, resulting in a need for finding alternate locations to be productive. Students seeking study locations that remain open during the evenings will gain the most advantages, as many places close early, and don’t accommodate for late hours. Our team proposes a web application that returns to the user a list of places open for studying, collaborating, to address the problem. </p>
+    </div>
+
+<br>
+
+    <!--
+      Placeholder for Problem Characteristics
+    <div class = "body-card">
+      <h2>Problem Characteristics</h2>
+
+      <p> Characteristics Placeholder </p>
+    </div>
+    -->
+    <br>
+      <div class = "footer">
+
+          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
+            |
+          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
+
+      </div>
+
+
   </body>
 </html>
