--- a/references.html
+++ b/references.html
@@ -3,71 +3,63 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
-    <link rel="stylesheet" href="references.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body style="background-color:black;">
-    <h1 style="color: Gold; font-weight: bold">Productive Places: Team Gold<h1>
-    <nav>
-      <a href="/ProductivePlaces/index.html" class="button_color">
-        <button>Home</button>
-      </a>
-      <a href="/ProductivePlaces/Problem.html" class="button_color">
-        <button>Problem</button>
-      </a>
-      <a href="/ProductivePlaces/presentations.html" class="button_color">
-        <button>Presentations</button>
-      </a>     
-      <a href="/ProductivePlaces/teambio.html" class="button_color">
-        <button>Team Bios</button>
-      </a>
-      <a href="/ProductivePlaces/Glossary.html" class="button_color">
-        <button>Glossary</button>
-      </a>
-      <a href="/ProductivePlaces/references.html" class="button_color">
-        <button>References</button>
-      </a><br><br>
-      <ul>
-       <ol>
-        <div class = "apa">
-          <p class = "text_Color">Draw.io - free flowchart maker and diagrams online. Flowchart Maker & Online Diagram Software. (n.d.). https://app.diagrams.net/#G1t9nWqBpGWQlMPaay1Tz1KpGtWdZxeuol#%7B%22pageId%22%3A%22C5RBs43oDa-KdzZeNtuy%22%7D</p>
-        </div>
+  <body>
+    <div class = "header" >
+      <h1>Productive Places: Team Gold</h1>
+    
+      <nav class = "topnav">
+        <a  class="button" href="/ProductivePlaces/index.html">
+        Home
+        </a>
+        <a  class="button" href="/ProductivePlaces/Problem.html">
+          Problem
+        </a>
+        <a class="button" href="/ProductivePlaces/presentations.html">
+          Presentations
+        </a>     
+        <a class="button" href="/ProductivePlaces/teambio.html">
+          Team Bios
+        </a>
+        <a class="button" href="/ProductivePlaces/Glossary.html">
+          Glossary
+        </a>
+        <a class="button" href="/ProductivePlaces/references.html">
+          References
+        </a>
+      </nav>
+      <br>
+     </div>
+      <div class="body-card">
+        <h2>References</h2>
+        <ul>
+            <li> Draw.io - free flowchart maker and diagrams online. Flowchart Maker & Online Diagram Software. (n.d.). https://app.diagrams.net/#G1t9nWqBpGWQlMPaay1Tz1KpGtWdZxeuol#%7B%22pageId%22%3A%22C5RBs43oDa-KdzZeNtuy%22%7D</li>
 
-        <div class = "apa">
-          <p class = "text_Color">Dziuba, A. (2024, January 12). Why and when to use node.js in 2024 [Complete guide]. Relevant Software. https://relevant.software/blog/why-and-when-to-use-node-js/#When_Not_to_Use_Nodejs</p>
-        </div>
+            <li>Dziuba, A. (2024, January 12). Why and when to use node.js in 2024 [Complete guide]. Relevant Software. https://relevant.software/blog/why-and-when-to-use-node-js/#When_Not_to_Use_Nodejs</li>
 
-        <div class = "apa">
-          <p class = "text_Color">Falk, A., & Ichino, A. (2006). Clean Evidence on Peer Effects. Journal of Labor Economics, 24(1), 39–57. https://doi.org/10.1086/497818</p>
-        </div>
+            <li>Falk, A., & Ichino, A. (2006). Clean Evidence on Peer Effects. Journal of Labor Economics, 24(1), 39–57. https://doi.org/10.1086/497818</li>
 
-        <div class = "apa">
-          <p class="text_Color">Hutsulyak, O. (2024, August 13). Why use react for web development: 10 reasons to apply. TechMagic. https://www.techmagic.co/blog/why-we-use-react-js-in-the-development</p>
-        </div>
+            <li>Hutsulyak, O. (2024, August 13). Why use react for web development: 10 reasons to apply. TechMagic. https://www.techmagic.co/blog/why-we-use-react-js-in-the-development</li>
 
-        <div class = "apa">
-          <p class="text_Color">Kennedy, T. (n.d.-a). CSTKENNEDY/CS410-411W-examples. GitHub. https://github.com/cstkennedy/cs410-411w-examples</p>
-        </div>
+            <li>Kennedy, T. (n.d.-a). CSTKENNEDY/CS410-411W-examples. GitHub. https://github.com/cstkennedy/cs410-411w-examples</li>
 
-        <div class = "apa">
-          <p class="text_Color">King, B. B. (n.d.). Inspire lifelong learning with these 25 education quotes. https://www.adobe.com/express/learn/blog/25-educational-quotes</p>
-        </div>
+            <li>King, B. B. (n.d.). Inspire lifelong learning with these 25 education quotes. https://www.adobe.com/express/learn/blog/25-educational-quotes</li>
 
-        <div class = "apa">
-          <p class="text_Color">Smallcombe, M. (2024, September 4). PostgreSQL vs MySQL: The critical differences. Integrate.io. https://www.integrate.io/blog/postgresql-vs-mysql-which-one-is-better-for-your-use-case/</p>
-        </div>
+            <li>Smallcombe, M. (2024, September 4). PostgreSQL vs MySQL: The critical differences. Integrate.io. https://www.integrate.io/blog/postgresql-vs-mysql-which-one-is-better-for-your-use-case/</li>
 
-        <div class = "apa">
-          <p class="text_Color">Steinmetz, J., & Fishbach, A. (2021, February 1). We work harder when we know someone’s watching. Harvard Business Review.</p>
-        </div>
-       </ol>
-        <li>
+            <li>Steinmetz, J., & Fishbach, A. (2021, February 1). We work harder when we know someone’s watching. Harvard Business Review.</li>
+          
+        </ul>
+      </div>
+<br>
+      <div class = "footer">
+
           <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
-        </li>
-        <li>
+            |
           <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
-        </li>
-      </ul>
-    </nav>
+
+      </div>
   </body>
 </html>
