--- a/teambio.html
+++ b/teambio.html
@@ -3,31 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <title>Team Gold</title>
-    <link rel="stylesheet" href="teambio.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body style="background-color:black;">
-    <h1 style="color: Gold;">Productive Places: Team Gold<h1>
-    <nav>
-      <a href="/ProductivePlaces/index.html" class="button_color">
-        <button>Home</button>
-      </a>
-      <a href="/ProductivePlaces/Problem.html" class="button_color">
-        <button>Problem</button>
-      </a>
-      <a href="/ProductivePlaces/presentations.html" class="button_color">
-        <button>Presentations</button>
-      </a>       
-      <a href="/ProductivePlaces/teambio.html" class="button_color">
-        <button>Team Bios</button>
-      </a>
-      <a href="/ProductivePlaces/Glossary.html" class="button_color">
-        <button>Glossary</button>
-      </a>
-      <a href="/ProductivePlaces/references.html" class="button_color">
-        <button>References</button>
-      </a><br><br>
-    </nav>
+  <body>
+    <div class = "header" >
+      <h1>Productive Places: Team Gold</h1>
+    
+      <nav class = "topnav">
+        <a  class="button" href="/ProductivePlaces/index.html">
+        Home
+        </a>
+        <a  class="button" href="/ProductivePlaces/Problem.html">
+          Problem
+        </a>
+        <a class="button" href="/ProductivePlaces/presentations.html">
+          Presentations
+        </a>     
+        <a class="button" href="/ProductivePlaces/teambio.html">
+          Team Bios
+        </a>
+        <a class="button" href="/ProductivePlaces/Glossary.html">
+          Glossary
+        </a>
+        <a class="button" href="/ProductivePlaces/references.html">
+          References
+        </a>
+      </nav>
+      <br>
+     </div>
+
+
     <div class="bio-row">
       <div class="bio-card">
         <h2>Chanze McDowell</h2>
@@ -51,11 +57,10 @@
       <img src="images\Denise.png" alt="Denise Dela Cruz portrait">
       <p>Denise Dela Cruz is a senior at Old Dominion University majoring in Computer 
         Science and minoring in Cybersecurity. Originally from Washington state, 
-        she's currently living in Virginia Beach, Virginia and attends classes virtually. 
-        She has been working as a Medical Laboratory Technician at Sentara Norfolk 
-        General's Reference Lab and Immunology Lab for 11 years, and concurrently served 
-        in the Army Reserves for 6 of those years.  In her free time, she enjoys playing 
-        cozy video games with her daughter and attending concerts.</p>
+        she now lives in Virginia Beach. She has been working as a Medical 
+        Laboratory Technician at Sentara Norfolk General's Reference Lab and Immunology 
+        Lab for 11 years, while serving in the Army Reserves for 6 of those years. 
+        In her free time, she enjoys finding new restaurants and attending concerts.</p>
       </div>
       <div class="bio-card">
       <h2>Jake Carosi</h2>
@@ -95,5 +100,14 @@
       </div>
       <div class="bio-cardspacer"></div>
     </div>
+
+    <br>
+      <div class = "footer">
+
+          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
+            |
+          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
+
+      </div>
   </body>
 </html>
