--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Team Gold</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
-    <body>
-    <div class = "header" >
+  <body>
+    <div class="header">
       <h1>Productive Places: Team Gold</h1>
 
-      <nav class = "topnav">
-        <a  class="button" href="/ProductivePlaces/index.html">
-        Home
-        </a>
-        <a  class="button" href="/ProductivePlaces/Problem.html">
-          Problem
-        </a>
+      <nav class="topnav">
+        <a class="button" href="/ProductivePlaces/index.html"> Home </a>
+        <a class="button" href="/ProductivePlaces/Problem.html"> Problem </a>
         <a class="button" href="/ProductivePlaces/presentations.html">
           Presentations
-        </a>     
-        <a class="button" href="/ProductivePlaces/teambio.html">
-          Team Bios
         </a>
-        <a class="button" href="/ProductivePlaces/Glossary.html">
-          Glossary
-        </a>
+        <a class="button" href="/ProductivePlaces/teambio.html"> Team Bios </a>
+        <a class="button" href="/ProductivePlaces/Glossary.html"> Glossary </a>
         <a class="button" href="/ProductivePlaces/references.html">
           References
         </a>
       </nav>
-      <br>
-</div>
-     <br>
-      <div class = "footer">
-
-          <a href="http://www.odu.edu/" class = "text_Color">ODU website</a>
-            |
-          <a href="http://www.cs.odu.edu/" class = "text_Color">ODU CS Department</a>
-
-      </div>
-    </body>
+      <br />
+    </div>
+    <img src="images\Gold_Ore_JE3_BE2.png" alt="Chanze McDowell portrait" />
+    <br />
+    <div class="footer">
+      <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
+      |
+      <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
+    </div>
+  </body>
 </html>
