--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       </nav>
       <br />
     </div>
-    <img src="images\Gold_Ore_JE3_BE2.png" alt="Chanze McDowell portrait" />
+    <img
+      style="display: block; margin: auto"
+      src="images\Gold_Ore_JE3_BE2.png"
+      alt="Homepage Image"
+    />
     <br />
     <div class="footer">
       <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
