--- a/Glossary.html
+++ b/Glossary.html
@@ -38,12 +38,12 @@
      <div class ="body-card">
       <h2>Glossary</h2>
       <ol>
-        <li>API (Application Programming Interface): A set of rules that allows two software applications to communicate with each other and exchange data. </li><br>
-        <li>Body doubling effect: When a person is more motivated to be productive in the presence of others, rather than alone at home. </li><br>
-        <li>Git: Version Control</li><br>
-        <li>Integrated Development Environment(IDE): Software application that provides facilities for software development.</li><br>
-        <li>User Interface (UI): Visual elements of a software product.</li><br>
-        <li>User Experience (UX): Overall experience and interaction a user has with a product.</li><br>
+        <li><b>API (Application Programming Interface):</b> A set of rules that allows two software applications to communicate with each other and exchange data. </li><br>
+        <li><b>Body doubling effect:</b> When a person is more motivated to be productive in the presence of others, rather than alone at home. </li><br>
+        <li><b>Git:</b> Version Control</li><br>
+        <li><b>Integrated Development Environment(IDE):</b> Software application that provides facilities for software development.</li><br>
+        <li><b>User Interface (UI):</b> Visual elements of a software product.</li><br>
+        <li><b>User Experience (UX):</b> Overall experience and interaction a user has with a product.</li><br>
       </ol>
     </div>
 
