--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="banner">
-    <img src= "\images\home.png" alt ="Home banner" class = "banner-img">
+    <img src= "images\home.png" alt ="Home banner" class = "banner-img">
   </div>
   <br>
   <div class="header">
