Embedded lab outline

--- a/labs.html
+++ b/labs.html
@@ -46,14 +46,13 @@
 
     <div class="main">
         <div class="body-card">
+            <div class="center">
+                <h2>Collaborative Lab Outline</h2>
+                <iframe
+                    src="https://docs.google.com/document/d/e/2PACX-1vSPo0qraFPUEjgUj0BF9XGedeRBG7e63L3eOtAF30xKYMQ9fk0DlbXWy5RP0eH7bfHohl3tZxq0A4nG/pub?embedded=true"></iframe>
 
-
-            <center><a class="button" href="/labs/Lab_1_-_Productive_Places_Final_Outline.pdf" download>
-                    Collaborative Group Outline
-                </a></center>
-
+            </div>
         </div>
-
         <br>
         <div class="footer">
 
