--- a/labs.html
+++ b/labs.html
@@ -50,7 +50,7 @@
                 <h2>Collaborative Lab Outline</h2>
                 <iframe
                     src="https://docs.google.com/document/d/e/2PACX-1vSPo0qraFPUEjgUj0BF9XGedeRBG7e63L3eOtAF30xKYMQ9fk0DlbXWy5RP0eH7bfHohl3tZxq0A4nG/pub?embedded=true"
-                    frameborder="0" width="90%" height="839px" allowfullscreen="true" mozallowfullscreen="true"
+                    frameborder="0" width="50%" max-height="600px" allowfullscreen="true" mozallowfullscreen="true"
                     webkitallowfullscreen="true"></iframe>
 
             </div>
