--- a/references.html
+++ b/references.html
@@ -1,98 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Team Gold</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Team Gold</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-  <div class="body-card">
-    <h3>References</h3>
-  </div>
-
-  <br>
-
-  <div class="header">
-    <br>
-    <nav class="topnav">
-      <a class="button" href="/ProductivePlaces/index.html">
-        Home
-      </a>
-      <a class="button" href="/ProductivePlaces/Problem.html">
-        Problem
-      </a>
-      <a class="button" href="/ProductivePlaces/presentations.html">
-        Presentations
-      </a>
-      <a class="button" href="/ProductivePlaces/labs.html">
-        Labs
-      </a>
-      <a class="button" href="/ProductivePlaces/Glossary.html">
-        Glossary
-      </a>
-      <a class="button" href="/ProductivePlaces/references.html">
-        References
-      </a>
-      <a class="button" href="/ProductivePlaces/teambio.html">
-        Team Gold
-      </a>
-    </nav>
-    <br>
-  </div>
-
-  <div class="main">
+  <body>
     <div class="body-card">
-      <ul>
-        <li><i>Draw.io - free flowchart maker and diagrams online.</i> Flowchart Maker & Online Diagram Software.
-          (n.d.).
-          https://app.diagrams.net/#G1t9nWqBpGWQlMPaay1Tz1KpGtWdZxeuol#%7B%22pageId%22%3A%22C5RBs43oDa-KdzZeNtuy%22%7D
-        </li>
-        <br>
-
-        <li>Dziuba, A. (2024, January 12).<i>Why and when to use node.js in 2024 [Complete guide].</i> Relevant
-          Software. https://relevant.software/blog/why-and-when-to-use-node-js/#When_Not_to_Use_Nodejs</li>
-        <br>
-
-        <li>Falk, A., & Ichino, A. (2006). <i>Clean Evidence on Peer Effects.</i> Journal of Labor Economics, 24(1),
-          39–57. https://doi.org/10.1086/497818</li>
-        <br>
-
-        <li>Goodwin, M. (2024, April 9). <i>What is an API (application programming interface)?.</i> IBM.
-          https://www.ibm.com/topics/api </li>
-        <br>
-
-        <li>Hutsulyak, O. (2024, August 13). <i>Why use react for web development: 10 reasons to apply.</i> TechMagic.
-          https://www.techmagic.co/blog/why-we-use-react-js-in-the-development</li>
-        <br>
-
-        <li>Kennedy, T. (n.d.-a). CSTKENNEDY/CS410-411W-examples. GitHub.
-          https://github.com/cstkennedy/cs410-411w-examples</li>
-        <br>
-
-        <li>King, B. B. (n.d.). <i>Inspire lifelong learning with these 25 education quotes.</i>
-          https://www.adobe.com/express/learn/blog/25-educational-quotes</li>
-        <br>
-
-        <li>Smallcombe, M. (2024, September 4). <i>PostgreSQL vs MySQL: The critical differences.</i> Integrate.io.
-          https://www.integrate.io/blog/postgresql-vs-mysql-which-one-is-better-for-your-use-case/</li>
-        <br>
-
-        <li>Steinmetz, J., & Fishbach, A. (2021, February 1). <i>We work harder when we know someone’s watching.</i>
-          Harvard Business Review.</li>
-
-      </ul>
+      <h3>References</h3>
     </div>
-  </div>
-  <br>
-  <div class="footer">
 
-    <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
-    |
-    <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
+    <br />
 
-  </div>
-</body>
+    <div class="header">
+      <br />
+      <nav class="topnav">
+        <a class="button" href="/ProductivePlaces/index.html"> Home </a>
+        <a class="button" href="/ProductivePlaces/Problem.html"> Problem </a>
+        <a class="button" href="/ProductivePlaces/presentations.html">
+          Presentations
+        </a>
+        <a class="button" href="/ProductivePlaces/labs.html"> Labs </a>
+        <a class="button" href="/ProductivePlaces/Glossary.html"> Glossary </a>
+        <a class="button" href="/ProductivePlaces/references.html">
+          References
+        </a>
+        <a class="button" href="/ProductivePlaces/teambio.html"> Team Gold </a>
+      </nav>
+      <br />
+    </div>
 
+    <div class="main">
+      <div class="body-card">
+        <ul>
+          <li>
+            <i>Draw.io - free flowchart maker and diagrams online.</i> Flowchart
+            Maker & Online Diagram Software. (n.d.).
+            https://app.diagrams.net/#G1t9nWqBpGWQlMPaay1Tz1KpGtWdZxeuol#%7B%22pageId%22%3A%22C5RBs43oDa-KdzZeNtuy%22%7D
+          </li>
+          <br />
+
+          <li>
+            Dziuba, A. (2024, January 12).<i
+              >Why and when to use node.js in 2024 [Complete guide].</i
+            >
+            Relevant Software.
+            https://relevant.software/blog/why-and-when-to-use-node-js/#When_Not_to_Use_Nodejs
+          </li>
+          <br />
+
+          <li>
+            Falk, A., & Ichino, A. (2006).
+            <i>Clean Evidence on Peer Effects.</i> Journal of Labor Economics,
+            24(1), 39–57. https://doi.org/10.1086/497818
+          </li>
+          <br />
+
+          <li>
+            Goodwin, M. (2024, April 9).
+            <i>What is an API (application programming interface)?.</i> IBM.
+            https://www.ibm.com/topics/api
+          </li>
+          <br />
+
+          <li>
+            Hutsulyak, O. (2024, August 13).
+            <i>Why use react for web development: 10 reasons to apply.</i>
+            TechMagic.
+            https://www.techmagic.co/blog/why-we-use-react-js-in-the-development
+          </li>
+          <br />
+
+          <li>
+            Kennedy, T. (n.d.-a). CSTKENNEDY/CS410-411W-examples. GitHub.
+            https://github.com/cstkennedy/cs410-411w-examples
+          </li>
+          <br />
+
+          <li>
+            King, B. B. (n.d.).
+            <i>Inspire lifelong learning with these 25 education quotes.</i>
+            https://www.adobe.com/express/learn/blog/25-educational-quotes
+          </li>
+          <br />
+
+          <li>
+            Smallcombe, M. (2024, September 4).
+            <i>PostgreSQL vs MySQL: The critical differences.</i> Integrate.io.
+            https://www.integrate.io/blog/postgresql-vs-mysql-which-one-is-better-for-your-use-case/
+          </li>
+          <br />
+
+          <li>
+            Steinmetz, J., & Fishbach, A. (2021, February 1).
+            <i>We work harder when we know someone’s watching.</i> Harvard
+            Business Review.
+          </li>
+          <br />
+
+          <li>
+            CANVA. (n.d.).
+            <i>Free design tool: Presentations, video, social media</i> CANVA.
+            (n.d.). https://www.canva.com/
+          </li>
+        </ul>
+      </div>
+    </div>
+    <br />
+    <div class="footer">
+      <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
+      |
+      <a href="http://www.cs.odu.edu/" class="text_Color">ODU CS Department</a>
+    </div>
+  </body>
 </html>
