--- a/teambio.html
+++ b/teambio.html
@@ -107,7 +107,7 @@
         <img src="images\Yomna.jpg" alt="Yomna Elmousalami portrait">
         <p>Yomna Elmousalami is a senior at Old Dominion University studying computer science.
           After graduating, she is interested in pursuing graduate studies and receiving
-          a Masters in Computer Science.</p>
+          a Masters in Computer.</p>
       </div>
       <div class="bio-cardspacer"></div>
     </div>
